lab03/01/ingress-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user00-bluegreen
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: user00-bluegreen.159.122.179.241.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollout-bluegreen-active
                port:
                  number: 80
